--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
 /* cabeçalho e navegaçao */
 body{
     font-family: 'Roboto Condensed', sans-serif;
+    background:linear-gradient(lightslategray,azure);
 }
 a{
     text-decoration: none;
     color: inherit;
 }
-header{
-    background-color: lightslategray;
-}
+
+
 #cabecalho-pecas{
     width: 100%;
     max-height: 400px;
@@ -66,6 +66,11 @@ nav li {
 }
 .container__promocionais{
     border: solid black;
+    width: 30%;
+}
+.container__promocionais:hover{
+    box-shadow: 4px 4px 4px 4px lightslategray;
+    
 }
 .obs{
     font-size: 20px;
@@ -83,8 +88,14 @@ nav li {
     background-position: center;
     background-repeat: no-repeat;
     display: inline-block;
-    height: 15px;
-    width: 15px;
+    height: 20px;
+    width: 20px;
+    background-size: 20px;
+}
+.price_types{
+    margin-top: 5px;
+    font-weight: 600;
+    font-size: 20px;
 }
 /*rodape*/
 .layrodape{
