--- a/style.css
+++ b/style.css
@@ -18,6 +18,19 @@ a{
     justify-content: space-around;
     align-items: center;
 }
+.telefones{
+    display: flex;
+    flex-direction: column;
+}
+.logo_telefone{
+    font-size: 18px;
+    color: silver;
+}
+.logo__telefone-texto{
+    font-size: 18px;
+    color: silver;
+    margin-top: 3px;
+}
 .name-logo_adjust{
     text-align: center;
 }
@@ -62,6 +75,7 @@ a{
 }
 .nav_list:hover{
     border-bottom: 3px solid;
+    display: inline;
 }
 /*conteudo main*/
  
@@ -72,11 +86,13 @@ a{
 }
 .promoimg{
     width: 100%;
-    height: 60%;
+    height:50%;
 }
 #promocionais{
     display: flex;
     justify-content: space-around;
+    height: 600px;
+    width: 90%;
 }
 .container__promocionais{
     border: solid black;
@@ -96,6 +112,8 @@ a{
     flex-direction: column;
     align-items: center;
     margin-top: 5px;
+    height: 38%;
+    justify-content: center;
 }
 .fa-credit-card{
     background-image:url("cartaocredito.png");
@@ -112,36 +130,3 @@ a{
     font-size: 20px;
 }
 /*rodape*/
-.layrodape{
-    background: #f9f6f6;
-    width: 100%;
-    position: absolute;
-}
-.msgrodape{
-    font-size: 22px;
-    font-weight: 800;
-    color: lightslategray;
-    vertical-align: top;
-    text-align: center;
-    text-decoration-line: underline;
-}
-.listarodape{
-    margin-top: 10px;
-    font-weight: 700;
-    margin-left: 40px;
-
-}
-
-.copyright{
-    font-size: 11px;
-    font-weight: 600;
-    color: black;
-    text-align: center;
-    margin-top: 70px;
-}
-.dev{
-    font-size: 12px;
-    font-weight: bold;
-    text-align: right;
-    margin-right: 15px;
-}
