--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -12,6 +12,7 @@ a{
     display: flex;
     justify-content: space-around;
     flex-direction: column;
+    height: 300px;
 }
 .container_text-logo{
     display: flex;
@@ -73,8 +74,8 @@ a{
     padding: 5px;
 }
 .nav_list:hover{
-    border-bottom: 3px solid;
-    display: inline;
+   font-size: 25px;
+   transition-delay: 1ms;
 }
 /*conteudo main*/
  
